--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "watch": "webpack --colors --progress --watch"
   },
   "devDependencies": {
-    "@parity/api": "2.1.x",
+    "@parity/api": "^2.1.15",
     "@parity/shared": "2.2.x",
     "moment": "2.17.0",
     "react": "15.6.1",
